tests/ui/error/unexpected_name_for_path_attrs.rs
#[derive(tidy_builder::Builder)]
struct MyStruct {
    #[builder(unknown)]
    args: Vec<String>,
}

fn main() {}
