tests/ui/error/unexpected_name_for_path_attrs.stderr
error: Unknown attribute
 --> tests/ui/error/unexpected_name_for_path_attrs.rs:3:15
  |
3 |     #[builder(unknown)]
  |               ^^^^^^^
